# bello

./: .gitignore  CMakeLists.txt  README.md  bibtex-formats.md  build-extensions.sh  build.sh  check-query.r  examples.md
.github/package-templates/: Info.plist  debian_control
.github/scripts/windows/: bello_installer.iss  configure-cmake.ps1  download-duckdb.ps1  locate-qt6.ps1  package-iss.ps1  package.ps1  verify-nsis.ps1  verify-package.ps1
.github/workflows/: build-mac.yml  build-ubuntu.yml  build-windows.yml
connector/: README.md  background-minimal.js  content-script.js  manifest.json  options.html  options.js  popup.html  popup.js
connector/_locales/en/: messages.json
src/: BrowserConnector.h  CenterSection.h  Database.h  EventHandlers.h  Helpers.h  Importers.h  LeftSection.h  MainWindow.h  RightSection.h  UI.h  UUID.h  main.cpp
